--- a/pages/index.css
+++ b/pages/index.css
@@ -2,5 +2,7 @@
     font-family: "Inter", Arial, sans-serif ;
     font-size: 16px;
     line-height: 20px;
-
+    max-width: 1600px;
+    min-width: 1100px;
+    margin: 0 auto;
 }
