--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,6 @@
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+
 .page {
     font-family: "Inter", Arial, sans-serif ;
     font-size: 16px;
@@ -227,3 +230,205 @@
     * {
         box-sizing: border-box;
     }
+
+    .menu {
+        padding: 100px 0 100px;
+        background-color: #fff;
+        background-image: url(../images/background_menu.svg);
+        background-size: cover;
+        text-align: center;
+        width: 100%;
+    }
+
+    .menu__title {
+        display: block;
+        margin: 0 auto;
+        font-family: "Inter";
+        font-style:normal;
+        font-weight: 500;
+        font-size: 44px;
+        line-height: 52px;
+        max-width: 780px;
+        padding-bottom: 24px;
+    }
+
+    .menu__subtitle {
+        display: block;
+        margin: 0 auto;
+        font-family: "Noto Serfi";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 30px;
+        max-width: 780px;
+        padding-top: 24px;
+        padding-bottom: 50px;
+    }
+
+    .menu__cards {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 100px;
+        padding: 0;
+        margin: 0;
+        list-style-type:none;
+    }
+
+    .card {
+        width:540px;
+    }
+
+    .card__list {
+        padding: 0;
+        margin: 0;
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        font-family: "Noto Serif";
+        font-style:normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .card__title {
+        margin: 0 0 32px;
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .card__list-item {
+        display: flex;
+    }
+
+    .card__list-divider {
+        border-bottom: 1px solid black;
+        flex-grow: 1;
+    }
+
+    .about {
+        background-color: #0a2850;
+        padding: 100px 80px 173px;
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        overflow: hidden;
+    }
+
+    .about__title {
+        margin: 0px;
+        max-width: 251px;
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: 500;
+        font-size: 44px;
+        line-height: 52px;
+        color: #fff;
+        z-index: 2;
+    
+        }
+
+    .about__content {
+        max-width: 660px;
+        font-family: "Noto Serif";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 30px;
+        color:#fff;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-left: 179px;
+        position:relative;
+        margin-top: 19px;
+        }
+
+    .about__circle {
+       width: 426px;
+       height: 426px;
+       background-color: #2f80ed;
+       border-radius: 50%;
+       position: absolute;
+       top: -152px;
+       left: -139px;
+       z-index: 1;
+    }
+
+
+    .about__paragraph {
+        margin: 0px;
+    }
+
+    .about__content > 
+    .about__paragraph {
+        margin-left: 20px;
+    }
+    
+    .footer {
+        background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+        padding: 16px 80px 108px;
+    }
+
+    .footer__content {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 80px 108px;
+    }
+
+    .footer__logo {
+        width: 105px;
+        height: 39px;
+    }
+
+    .footer__social-heading {
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 20px;
+        color: #fff;
+        margin-bottom: 20px;
+        padding-left: 80px;
+    }
+
+    .footer__list {
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        color:#fff;
+        display: flex;
+        padding-left: 80px; 
+        justify-content: flex-start;
+        flex-direction: column;
+        gap:16px;
+        list-style: none;
+    }
+
+    .footer__social-link {
+        color: #fff;
+        text-decoration: none;
+    }
+
+    .footer__social-icon {
+        height: 16px;
+        width: 16px;
+    }
+
+.footer__copyright {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    color:#fff;
+    margin-top: 108px;
+    margin-bottom: 10px;
+}
