--- a/blocks/about.css
+++ b/blocks/about.css
@@ -15,3 +15,62 @@
 .about__circle_animation_blurred {
     animation: pulsate 1.3s ease-in-out infinite;
 }
+
+.about {
+  background-color: #0a2850;
+  padding: 100px 80px 173px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.about__title {
+  margin: 0px;
+  max-width: 251px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  color: #fff;
+  z-index: 2;
+
+  }
+
+.about__content {
+  max-width: 660px;
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color:#fff;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-left: 179px;
+  position:relative;
+  margin-top: 19px;
+  }
+
+.about__circle {
+ width: 426px;
+ height: 426px;
+ background-color: #2f80ed;
+ border-radius: 50%;
+ position: absolute;
+ top: -152px;
+ left: -139px;
+ z-index: 1;
+}
+
+
+.about__paragraph {
+  margin: 0px;
+}
+
+.about__content > 
+.about__paragraph {
+  margin-left: 20px;
+}
