--- a/pages/index.css
+++ b/pages/index.css
@@ -1,434 +1,7 @@
 @import url(../blocks/page.css);
 @import url(../blocks/header.css);
-
-.page {
-    font-family: "Inter", Arial, sans-serif ;
-    font-size: 16px;
-    line-height: 20px;
-    max-width: 1600px;
-    min-width: 1100px;
-    margin: 0 auto;
-}
-
-.header {
-    padding: 30px 80px 40px;
-    min-height: 720px;
-    max-height: 800px;
-    height: 100vh;
-    background-image: url(../images/background_header.svg);
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-}
-
-.header__image {
-    position: absolute;
-    z-index: 1;
-    max-width: 550px;
-    top: 148px;
-    right: 48px;;
-}
-
-.nav {
-    display:flex;
-    justify-content: space-between;
-}
-
-.nav__logo {
-    position: relative;
-    left: -50px;
-    width: 105px;
-    height: 39px;
-}
-
-.nav__links {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    gap: 20px;
-
-}
-
-.nav__link {
-    color: #000;
-    text-decoration: none;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.header__title {
-    max-width: 729px;
-    font-size: 60px;
-    line-height: 70px;
-    margin: 183px 0 0;
-    letter-spacing: -0.6px;
-    font-weight: 500;
-}
-
-.header__description {
-    max-width: 683px;
-    font-size: 20px;
-    line-height: 30px;
-    margin: 28px 0 0;
-    font-family: "Noto Serif";
-    font-style: normal;
-    font-weight: normal;
-}
-
-.header__span-accent {
-    display: block;
-    color: #3f96f3;
-    font-family: "Noto Serif";
-    font-style: italic;
-    font-weight: normal;
-    font-size: 60px;
-    line-height: 72px;
-
-}
-
-.header__footer {
-    display: flex;
-    justify-content: space-between;
-    margin-top: auto;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color: #838383;
-    align-items: end;
-}
-
-.header__paragraph {
-    margin: 0;
-}
-
-.recipes {
-    padding: 100px 80px 215px;
-    background-color: #0a2750;
-    background-image: url(../images/background_recipes.svg);
-}
-
-.recipes__title {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-    color: #fff;
-}
-
-.recipes__subtitle {
-    font-family: "Noto Serif";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    color: #fff;
-}
-
-.recipes__videos {
-    display:flex;
-    gap: 100px;
-    justify-content: center;
-    margin-top: 80px;
-}
-
-.recipes__video-caption {
-    display: flex;
-    justify-content: space-between;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-    color: #fff;
-}
-
-    .recipes__iframe {
-        border: 0px;
-    }
-
-    .recipes__iframe {
-        border: 0px;
-    }
-
-    .reservation {
-        padding: 100px 0 120px;
-        background-image: url(../images/background_reservation.svg);
-        background-color: #d9e7ff;
-        background-size: cover;
-    }
-
-    .reservation__title {
-        margin: 0 0 80px;
-        text-align: center;
-        font-family: Inter;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 44px;
-        line-height: 52px;
-    }
-
-    .reservation__form {
-        margin: 0 auto;
-    }
-
-    .form {
-        max-width: 385px;
-        margin:auto;
-    }
-
-    .form__fieldset {
-        margin: 0;
-        padding: 0;
-        border: none;
-    }
-
-    .form__input {
-        display: block;
-        width: 100%;
-        padding: 15px 20px;
-        box-sizing: border-box;
-        margin: 8px 0 32px;
-        border: 1px solid #838383;
-        border-radius: 4px;
-    }
-
-    .form__button {
-        border-radius: 4px;
-        width: 100%;
-        border: none;
-        padding: 20px 0;
-        color: #fff;
-        background-color: #1878DC;
-        margin-bottom: 32px;
-    }
-
-    .form__button:hover {
-        transition: 0.7s;
-        background-color: #3f96f3;
-
-    }
-
-    .form_checkbox {
-        border-radius: 2px;
-        width: 20px;
-        height: 20px;
-    }
-
-    .form__label_type_checkbox {
-        display: flex;
-        gap: 12px;
-        justify-content: center;
-    }
-
-    * {
-        box-sizing: border-box;
-    }
-
-    .menu {
-        padding: 100px 0 100px;
-        background-color: #fff;
-        background-image: url(../images/background_menu.svg);
-        background-size: cover;
-        text-align: center;
-        width: 100%;
-    }
-
-    .menu__title {
-        display: block;
-        margin: 0 auto;
-        font-family: "Inter";
-        font-style:normal;
-        font-weight: 500;
-        font-size: 44px;
-        line-height: 52px;
-        max-width: 780px;
-        padding-bottom: 24px;
-    }
-
-    .menu__subtitle {
-        display: block;
-        margin: 0 auto;
-        font-family: "Noto Serfi";
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 30px;
-        max-width: 780px;
-        padding-top: 24px;
-        padding-bottom: 50px;
-    }
-
-    .menu__cards {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 100px;
-        padding: 0;
-        margin: 0;
-        list-style-type:none;
-    }
-
-    .card {
-        width:540px;
-    }
-
-    .card__list {
-        padding: 0;
-        margin: 0;
-        list-style-type: none;
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-        font-family: "Noto Serif";
-        font-style:normal;
-        font-weight: normal;
-        font-size: 16px;
-        line-height: 20px;
-    }
-
-    .card__title {
-        margin: 0 0 32px;
-        font-family: "Inter";
-        font-style: normal;
-        font-weight: bold;
-        font-size: 20px;
-        line-height: 30px;
-    }
-
-    .card__list-item {
-        display: flex;
-    }
-
-    .card__list-divider {
-        border-bottom: 1px solid black;
-        flex-grow: 1;
-    }
-
-    .about {
-        background-color: #0a2850;
-        padding: 100px 80px 173px;
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        overflow: hidden;
-    }
-
-    .about__title {
-        margin: 0px;
-        max-width: 251px;
-        font-family: "Inter";
-        font-style: normal;
-        font-weight: 500;
-        font-size: 44px;
-        line-height: 52px;
-        color: #fff;
-        z-index: 2;
-    
-        }
-
-    .about__content {
-        max-width: 660px;
-        font-family: "Noto Serif";
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 30px;
-        color:#fff;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        margin-left: 179px;
-        position:relative;
-        margin-top: 19px;
-        }
-
-    .about__circle {
-       width: 426px;
-       height: 426px;
-       background-color: #2f80ed;
-       border-radius: 50%;
-       position: absolute;
-       top: -152px;
-       left: -139px;
-       z-index: 1;
-    }
-
-
-    .about__paragraph {
-        margin: 0px;
-    }
-
-    .about__content > 
-    .about__paragraph {
-        margin-left: 20px;
-    }
-    
-    .footer {
-        background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-        padding: 16px 80px 108px;
-    }
-
-    .footer__content {
-        display: flex;
-        justify-content: space-between;
-        margin: 0 80px 108px;
-    }
-
-    .footer__logo {
-        width: 105px;
-        height: 39px;
-    }
-
-    .footer__social-heading {
-        font-family: "Inter";
-        font-style: normal;
-        font-weight: bold;
-        font-size: 16px;
-        line-height: 20px;
-        color: #fff;
-        margin-bottom: 20px;
-        padding-left: 80px;
-    }
-
-    .footer__list {
-        font-family: "Inter";
-        font-style: normal;
-        font-weight: normal;
-        font-size: 16px;
-        line-height: 20px;
-        color:#fff;
-        display: flex;
-        padding-left: 80px; 
-        justify-content: flex-start;
-        flex-direction: column;
-        gap:16px;
-        list-style: none;
-    }
-
-    .footer__social-link {
-        color: #fff;
-        text-decoration: none;
-    }
-
-    .footer__social-icon {
-        height: 16px;
-        width: 16px;
-    }
-
-.footer__copyright {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    color:#fff;
-    margin-top: 108px;
-    margin-bottom: 10px;
-}
+@import url(..blocks/recipes.css);
+@import url(../blocks/reservations.css);
+@import url(..blocks/menu.css);
+@import url(..blocks/about.css);
+@import url(..blocks/footer.css);
