--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,8 @@
 @import url(../blocks/page.css);
 @import url(../blocks/header.css);
-@import url(..blocks/recipes.css);
+@import url(../blocks/recipes.css);
 @import url(../blocks/reservations.css);
-@import url(..blocks/menu.css);
-@import url(..blocks/about.css);
-@import url(..blocks/footer.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
+@import url(../blocks/nav.css);
