--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,12 +1,13 @@
 .footer {
     background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-    padding: 16px 80px 108px;
+    padding: 60px 80px 168px;
 }
 
 .footer__content {
     display: flex;
     justify-content: space-between;
-    margin: 0 80px 108px;
+    margin: 0 0 108px;
+    gap: 80px;
 }
 
 .footer__logo {
@@ -21,8 +22,7 @@
     font-size: 16px;
     line-height: 20px;
     color: #fff;
-    margin-bottom: 20px;
-    padding-left: 80px;
+    margin: 0 0 20px;
 }
 
 .footer__list {
@@ -33,7 +33,7 @@
     line-height: 20px;
     color:#fff;
     display: flex;
-    padding-left: 80px; 
+    padding-left: 0; 
     justify-content: flex-start;
     flex-direction: column;
     gap:16px;
@@ -58,5 +58,5 @@ font-size: 16px;
 line-height: 20px;
 color:#fff;
 margin-top: 108px;
-margin-bottom: 10px;
+margin-bottom: 60px;
 }
