--- a/blocks/reservations.css
+++ b/blocks/reservations.css
@@ -3,6 +3,7 @@
     background-image: url(../images/background_reservation.svg);
     background-color: #d9e7ff;
     background-size: cover;
+    background-position: center;
 }
 
 .reservation__title {
@@ -17,57 +18,4 @@
 
 .reservation__form {
     margin: 0 auto;
-}
-
-.form {
-    max-width: 385px;
-    margin:auto;
-}
-
-.form__fieldset {
-    margin: 0;
-    padding: 0;
-    border: none;
-}
-
-.form__input {
-    display: block;
-    width: 100%;
-    padding: 15px 20px;
-    box-sizing: border-box;
-    margin: 8px 0 32px;
-    border: 1px solid #838383;
-    border-radius: 4px;
-}
-
-.form__button {
-    border-radius: 4px;
-    width: 100%;
-    border: none;
-    padding: 20px 0;
-    color: #fff;
-    background-color: #1878DC;
-    margin-bottom: 32px;
-}
-
-.form__button:hover {
-    transition: 0.7s;
-    background-color: #3f96f3;
-
-}
-
-.form_checkbox {
-    border-radius: 2px;
-    width: 20px;
-    height: 20px;
-}
-
-.form__label_type_checkbox {
-    display: flex;
-    gap: 12px;
-    justify-content: center;
-}
-
-* {
-    box-sizing: border-box;
 }
