--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,62 +1,67 @@
 .footer {
-    background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-    padding: 60px 80px 168px;
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  padding: 60px 80px 168px;
 }
 
 .footer__content {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 0 108px;
-    gap: 80px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 108px;
+  gap: 80px;
 }
 
 .footer__logo {
-    width: 105px;
-    height: 39px;
+  width: 105px;
+  height: 39px;
 }
 
 .footer__social-heading {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 20px;
-    color: #fff;
-    margin: 0 0 20px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  margin: 0 0 20px;
 }
 
 .footer__list {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    color:#fff;
-    display: flex;
-    padding-left: 0; 
-    justify-content: flex-start;
-    flex-direction: column;
-    gap:16px;
-    list-style: none;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  display: flex;
+  padding-left: 0;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 16px;
+  list-style: none;
 }
 
 .footer__social-link {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.footer__social-link:hover {
+  opacity: 70%;
 }
 
 .footer__social-icon {
-    height: 16px;
-    width: 16px;
+  height: 16px;
+  width: 16px;
 }
 
 .footer__copyright {
-font-family: "Inter";
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 20px;
-color:#fff;
-margin-top: 108px;
-margin-bottom: 60px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+  margin-top: 108px;
+  margin-bottom: 60px;
 }
