--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,31 +1,34 @@
 .nav {
-    display:flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav__logo {
-    position: relative;
-    left: -50px;
-    width: 105px;
-    height: 39px;
+  position: relative;
+  left: -50px;
+  width: 105px;
+  height: 39px;
 }
 
 .nav__links {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    gap: 20px;
-
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  gap: 20px;
 }
 
 .nav__link {
-    color: #000;
-    text-decoration: none;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
+  color: #000;
+  text-decoration: none;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  transition: opacity 0.3s ease-in-out;
 }
- 
+
+.nav__link:hover {
+  opacity:50%;
+}
