--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,53 +1,53 @@
 .recipes {
-    padding: 100px 80px 215px;
-    background-color: #0a2750;
-    background-image: url(../images/background_recipes.svg);
-    background-size: cover;
-    background-position: center;
+  padding: 100px 80px 215px;
+  background-color: #0a2750;
+  background-image: url(../images/background_recipes.svg);
+  background-size: cover;
+  background-position: center;
 }
 
 .recipes__title {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-    color: #fff;
-    margin: 100px 0 24px 80px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  color: #fff;
+  margin: 100px 0 24px 80px;
 }
 
 .recipes__subtitle {
-    font-family: "Noto Serif";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    color: #fff;
-    margin: 24px 0 80px 80px;
-    max-width: 438px;
+  font-family: "Noto Serif", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
+  margin: 24px 0 80px 80px;
+  max-width: 438px;
 }
 
 .recipes__videos {
-    display:flex;
-    gap: 40px;
-    justify-content: center;
-    margin-top: 80px;
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  margin-top: 80px;
 }
 
 .recipes__video-caption {
-    display: flex;
-    justify-content: space-between;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-    color: #fff;
-    margin: 24px 0 215px;
+  display: flex;
+  justify-content: space-between;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
+  margin: 24px 0 215px;
 }
 
-    .recipes__iframe {
-        border: 0px;
-        width: 480px;
-        height: 273px;
-    }
+.recipes__iframe {
+  border: 0px;
+  width: 480px;
+  height: 273px;
+}
