--- a/blocks/reservations.css
+++ b/blocks/reservations.css
@@ -1,21 +1,21 @@
 .reservation {
-    padding: 100px 0 120px;
-    background-image: url(../images/background_reservation.svg);
-    background-color: #d9e7ff;
-    background-size: cover;
-    background-position: center;
+  padding: 100px 0 120px;
+  background-image: url(../images/background_reservation.svg);
+  background-color: #d9e7ff;
+  background-size: cover;
+  background-position: center;
 }
 
 .reservation__title {
-    margin: 0 0 80px;
-    text-align: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
+  margin: 0 0 80px;
+  text-align: center;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
 }
 
 .reservation__form {
-    margin: 0 auto;
+  margin: 0 auto;
 }
