--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-  padding: 60px 80px 168px;
+  padding: 60px 80px 60px;
 }
 
 .footer__content {
@@ -38,6 +38,7 @@
   flex-direction: column;
   gap: 16px;
   list-style: none;
+  margin: 0;
 }
 
 .footer__social-link {
@@ -62,6 +63,4 @@
   font-size: 16px;
   line-height: 20px;
   color: #fff;
-  margin-top: 108px;
-  margin-bottom: 60px;
 }
