--- a/blocks/form.css
+++ b/blocks/form.css
@@ -56,14 +56,11 @@
   border-radius: 2px;
   width: 20px;
   height: 20px;
+  margin: 0;
 }
 
 .form__label_type_checkbox {
   display: flex;
   gap: 12px;
   justify-content: center;
-}
-
-* {
-  box-sizing: border-box;
 }
