--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/page.css);
 @import url(../blocks/header.css);
 @import url(../blocks/recipes.css);
@@ -8,4 +9,4 @@
 @import url(../blocks/nav.css);
 @import url(../blocks/card.css);
 @import url(../blocks/form.css);
-@import url(../blocks/normalize.css);
+
